--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Report CHQ AIA</title>
-    <link href="./index_files/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./index_files/style.css"> 
-    <link rel="icon" type="image/png" href="file:///C:/Users/Suchat/OneDrive/Desktop/Project%20CHQ%20AIA/CHQ%20AIA/favicon.png"> 
+    <link href="bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css"> 
+    <link rel="icon" type="image/png" href="favicon.png">
     
-    <script src="./index_files/xlsx.full.min.js.download"></script>
-    <script src="./index_files/JsBarcode.all.min.js.download"></script>
+    <script src="xlsx.full.min.js"></script>
+    <script src="JsBarcode.all.min.js"></script>
 </head>
 <body>
     <div class="container" style="max-width: 1000px;">
@@ -153,8 +153,8 @@
         </div>
     </div>
 
-    <script src="./index_files/bootstrap.bundle.min.js.download"></script> 
-    <script src="./index_files/script.js"></script> 
+    <script src="bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
 
 
 </body></html>
