--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="ig-card">
             <div class="d-flex justify-content-between align-items-start mb-3">
                 <div class="logo-title-container d-flex align-items-center">
-                    <img src="./index_files/aia-logo.png" alt="AIA Logo" class="aia-logo">       
+                    <img src="aia-logo.png" alt="AIA Logo" class="aia-logo">       
                     <h1 class="header-title-inline">Report CHQ AIA</h1>
 
                 </div>
