--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
 
 
     <footer class="text-center mt-1 mb-1 text-secondary small">
+		<img src="./kaizen.png" alt="kaizen" class="kaizen">
        Kaizen Basic by.สุชาติ นุ่มฝ้าย  | SIAMPRESS CO., LTD. 
+		<img src="./siampress.png" alt="siampress" class="siampress">
     </footer>
         </div>
 
