--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
 
 
     <footer class="text-center mt-1 mb-1 text-secondary small">
-		<img src="./kaizen.png" alt="kaizen" class="kaizen">
+		<img src="kaizen.png" alt="KAIZEN" class="kaizen"> 
        Kaizen Basic by.สุชาติ นุ่มฝ้าย  | SIAMPRESS CO., LTD. 
-		<img src="./siampress.png" alt="siampress" class="siampress">
+		<img src="siampress.png" alt="SIIAMPRESS Logo" class="siampress"> 
     </footer>
         </div>
 
